# CoopAndreasLauncher

./: .gitignore  Cargo.toml  README.MD  README.md  build.rs  pubspec.yaml  resource.rc
assistant/: CMakeLists.txt  toolchain_32bit.cmake
assistant/src/: launcher_assistant.cpp  launcher_assistant.h
lib/: main.dart
lib/classes/controllers/: page_controllers_manipulate.dart  tab_controllers_manipulate.dart  text_controllers_manipulate.dart  version_controller.dart
lib/classes/data/: storage_data.dart
lib/classes/fields/: manipulate.dart
lib/classes/main/: start_game.dart
lib/classes/misc/: system_info_provider.dart  wmi_provider.dart
lib/classes/settings/game_path/: game_path.dart
lib/classes/settings/unique_system_id/: unique_system_id.dart
lib/l10n/: app_da.arb  app_en.arb  app_he.arb  app_nb.arb  app_pt.arb  app_ru.arb  app_uk.arb  l10n.dart
lib/language/: language_provider.dart
lib/launcher/: main_page.dart
lib/launcher/widgets/main_tab/: authors.dart  create_server.dart  (+2 more)
lib/theme/: dark.dart  light.dart  main_colors.dart  theme_provider.dart
lib/utils/: constants.dart  extract_version.dart  launch_result.dart
native/: CMakeLists.txt  launcher.cpp
src/: embed.rs  launcher_data.rs  main.rs
src/controllers/: button_icon_controller.rs  drag_window_controller.rs  link_icon_controller.rs  mod.rs  window_button_controller.rs
src/utils/: colors.rs  image.rs  mod.rs  open_browser.rs  url.rs  window_constants.rs
src/widgets/: button.rs  drag_controller.rs  icon.rs  link_icon.rs  mod.rs  splash.rs  window_button.rs
windows/: CMakeLists.txt
(+7 files in other folders)
