[package]
name = "coopandreas_launcher"
version = "0.1.0"
edition = "2024"

build = "build.rs"

[dependencies]
druid = { version = "0.8.3", features = ["image"] }
image = { version = "0.24.9", features = ["png"] }
rust-embed = "8.7.2"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
